<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/cartFragment"
        app:actionLayout="@layout/cart_counter"
        android:title="@string/menu_cart_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_layout"
        android:icon="@drawable/ic_baseline_linear_layout_24"
        android:title="@string/menu_layout_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_test"
        android:title="@string/menu_test_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete_all"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_delete_all_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_prepopulate"
        android:title="@string/menu_prepopulate_title"
        app:showAsAction="never" />
</menu>