<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graf"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.minimarket.ui.list.ListFragment"
        android:label="@string/fragment_list_title"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
        <action
            android:id="@+id/action_listFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>
    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.example.minimarket.ui.product_details.ProductDetailsFragment"
        android:label="@string/fragment_product_details_title"
        tools:layout="@layout/fragment_product_details">
        <argument
            android:name="productId"
            app:argType="integer" />
        <action
            android:id="@+id/action_productDetailsFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.minimarket.ui.cart.CartFragment"
        android:label="@string/fragment_cart_title"
        tools:layout="@layout/fragment_cart" />
</navigation>